# FLAIR

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_ja.md  flair.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: codex_flair_proposal.md  flair_novelty_analysis.md  flair_oss_api_strategy.md  flair_v2_codex_proposal.md  flar_v3_plan.md  flar_v9_announcement.md  improvement_plan_conformal_calibration.md  plan_shifted_log_experiment.md  research_benchmarks.md  research_m5_top_solutions.md  research_novelty_analysis.md  research_periodicity_hierarchy.md  research_ridge_improvements.md  research_short_horizon_cross_period.md  research_short_series_improvements.md  research_time_varying_shape.md
docs/flair_tech_report/: FLAIR_Technical_Report.md  FLAIR_Technical_Report_ja.md  shape2_shrinkage_theory.md
docs/paper/: ablation_history.md  killer_phrases.md
examples/: _build_exog_notebook.py  exogenous_variables.ipynb  quickstart.ipynb
flaircast/: __init__.py  _constants.py  _forecast.py  _frequency.py  _level.py  _period.py  _shape.py
pyflair/: __init__.py
research/analysis/: analyze_level_autocorr.py  analyze_rank1_dominance.py
research/benchmarks/: evaluate_kiss_benchmark.py  evaluate_m5_flair_exog.py  evaluate_m5_flair_hierarchical.py  evaluate_m5_flair_quick.py  evaluate_m5_wrmsse.py  experiment_coherent_phase_noise.py  experiment_cv_conformal.py  experiment_ewrr.py  experiment_ihs.py  experiment_mdl_transform.py  run_gift_eval_flair_ds.py  run_gift_eval_flair_ds_full.py  run_gift_eval_flar9.py  run_gift_eval_mfles.py  run_gift_eval_prophet.py  run_longterm_benchmark.py  run_monash_benchmark.py
research/figures/: generate_fig4_benchmark.py  generate_fig6_chronos_benchmark.py  generate_fig8_monash_full.py  visualize_flair_pipeline.py
results/: 3pattern_comparison_report.md  3pattern_comparison_report_v2.md  m5_improved_proposal_a_report.md  m5_mint_enhanced_report.md  rank1_dominance.csv  wpmo_experiment_report.md
results/03_m5_2pattern/: m5_2pattern_comparison_report.md
results/04_clustering_proposal/: clustering_improvement_proposal.md
results/06_m5_twostage/: m5_twostage_proposal_b_report.md
results/07_m5_mint_hierarchical/: m5_mint_hierarchical_report.md
results/09_middle_out/: m5_middle_out_report.md
results/10_mo_v2_verification/: mo_v2_verification_report.md
results/11_pcmo_prmo/: pcmo_prmo_report.md
results/12_wpmo/: wpmo_experiment_report.md
results/13_m5_wrmsse_benchmark/: m5_wrmsse_benchmark_report.md
results/14_kiss_benchmark/: kiss_benchmark_report.md
results/15_gift_eval/: all_results.csv  all_results_FLAIR_MDL_coherent.csv  all_results_adpc.csv  all_results_baseline_md5seed.csv  all_results_baseline_seeded.csv  all_results_flair_deseason.csv  all_results_flair_ds.csv  all_results_flair_dss.csv  all_results_flair_mdl.csv  all_results_flair_mdl2.csv  all_results_flair_mdl3.csv  all_results_flair_mdl_svdmodal.csv  all_results_flair_mdl_svdrq.csv  all_results_flair_shrink.csv  all_results_flair_uni.csv  all_results_flair_uni2.csv  all_results_flair_uni3.csv  all_results_flair_v2.csv  all_results_flar_sa.csv  all_results_flar_v9.csv  all_results_mfles.csv  all_results_prophet.csv  quick_analysis.csv
results/16_m5_flar_v5v7/: wrmsse_results.csv  wrmsse_v5_mint.csv  wrmsse_wpmo_v5.csv
results/17_m5_flair/: m5_flair_quick_report.md  (+1 more)
scripts/: merge-to-main.sh
tests/: conftest.py  test_exogenous.py  test_forecast_edge.py  test_forecast_smoke.py  test_golden.py  test_helpers.py  test_properties.py  test_reproducibility.py  test_validation.py
validation/: README.md  validate_bike_daily.py  validate_jena.py  validate_noise_robustness.py
(+22 files in other folders)
