[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyflair"
version = "0.1.0"
description = "FLAIR: Factored Level And Interleaved Ridge — zero-hyperparameter time series forecasting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Takato Honda" },
]
keywords = ["time-series", "forecasting", "ridge-regression", "probabilistic-forecasting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.urls]
Homepage = "https://github.com/TakatoHonda/FLAIR"
Repository = "https://github.com/TakatoHonda/FLAIR"

[tool.hatch.build.targets.wheel]
packages = ["pyflair"]
