[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flaircast"
version = "0.2.0"
description = "FLAIR: Factored Level And Interleaved Ridge — zero-hyperparameter time series forecasting"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Takato Honda" },
]
keywords = ["time-series", "forecasting", "ridge-regression", "probabilistic-forecasting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/TakatoHonda/FLAIR"
Repository = "https://github.com/TakatoHonda/FLAIR"

[tool.hatch.build.targets.sdist]
include = ["flaircast/", "tests/", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["flaircast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests for individual functions",
    "integration: end-to-end forecast tests",
    "golden: regression tests against saved outputs",
    "slow: tests that take >5 seconds",
]

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF002", "RUF003"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true
